package com.hoangtien.designpatterns.creational.factory;

public interface Notification {
    String send(String recipient, String message);
}
